@@ -8,3 +8,9 @@ override_dh_makeshlibs:
 
 override_dh_install:
 	dh_install --fail-missing -X.la
+
+override_dh_auto_configure:
+	dh_auto_configure -- --disable-silent-rules
+
+override_dh_auto_test:
+	dh_auto_test -- VERBOSE=1
